--- a/visual.ipynb
+++ b/visual.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -48,8 +48,7 @@
       "(375, 1242)\n",
       "4\n",
       "28\n",
-      "uint8\n",
-      "14\n"
+      "uint8\n"
      ]
     }
    ],
@@ -62,84 +61,43 @@
     "print(img2.shape)\n",
     "print(np.min(img2))\n",
     "print(np.max(img2))\n",
-    "print(img2.dtype)\n",
-    "unique_values, counts = np.unique(img2, return_counts=True)\n",
-    "print(len(counts))"
+    "print(img2.dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imsave(\"tinySet/trail.png\", img2, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[181 181 181 255]\n",
-      "  [181 181 181 255]\n",
-      "  [181 181 181 255]\n",
-      "  ...\n",
-      "  [ 73  73  73 255]\n",
-      "  [ 73  73  73 255]\n",
-      "  [ 73  73  73 255]]\n",
-      "\n",
-      " [[181 181 181 255]\n",
-      "  [181 181 181 255]\n",
-      "  [181 181 181 255]\n",
-      "  ...\n",
-      "  [ 73  73  73 255]\n",
-      "  [ 73  73  73 255]\n",
-      "  [ 73  73  73 255]]\n",
-      "\n",
-      " [[181 181 181 255]\n",
-      "  [181 181 181 255]\n",
-      "  [181 181 181 255]\n",
-      "  ...\n",
-      "  [ 73  73  73 255]\n",
-      "  [ 73  73  73 255]\n",
-      "  [ 73  73  73 255]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[ 31  31  31 255]\n",
-      "  [ 31  31  31 255]\n",
-      "  [ 31  31  31 255]\n",
-      "  ...\n",
-      "  [235 235 235 255]\n",
-      "  [235 235 235 255]\n",
-      "  [235 235 235 255]]\n",
-      "\n",
-      " [[ 31  31  31 255]\n",
-      "  [ 31  31  31 255]\n",
-      "  [ 31  31  31 255]\n",
-      "  ...\n",
-      "  [235 235 235 255]\n",
-      "  [235 235 235 255]\n",
-      "  [235 235 235 255]]\n",
-      "\n",
-      " [[ 31  31  31 255]\n",
-      "  [ 31  31  31 255]\n",
-      "  [ 31  31  31 255]\n",
-      "  ...\n",
-      "  [235 235 235 255]\n",
-      "  [235 235 235 255]\n",
-      "  [235 235 235 255]]]\n"
+      "发现的类别标签：{0, 4, 7, 8, 9, 11, 12, 13, 17, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 31, 32, 33}\n",
+      "类别数量：22\n"
      ]
     }
    ],
    "source": [
-    "img3= io.imread(\"tinySet/trail.png\")\n",
-    "print(img3)"
+    "\n",
+    "def count_classes_in_masks(mask_dir):\n",
+    "    unique_classes = set()\n",
+    "\n",
+    "    for mask_file in os.listdir(mask_dir):\n",
+    "        if(mask_file==\".DS_Store\"):\n",
+    "            continue\n",
+    "        mask_path = os.path.join(mask_dir, mask_file)\n",
+    "        mask = io.imread(mask_path)  # 读取掩膜为numpy数组\n",
+    "        unique_values = np.unique(mask)  # 找到掩膜中的所有唯一值\n",
+    "        unique_classes.update(unique_values)  # 更新类别集合\n",
+    "\n",
+    "    print(f\"发现的类别标签：{unique_classes}\")\n",
+    "    print(f\"类别数量：{len(unique_classes)}\")\n",
+    "    return len(unique_classes)\n",
+    "\n",
+    "# 使用函数统计类别数\n",
+    "\n",
+    "num_classes = count_classes_in_masks(\"tinySet/mask\")\n"
    ]
   }
  ],
